# mosaic

./: .buildinfo  .gitignore  .mcp.json  MANIFEST.in  README.md  RELEASE_NOTES.md  create_dmg.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  qt_runtime-hook.py  search.html  searchindex.js  substitutions.html
.doctrees/: environment.pickle  genindex.doctree  index.doctree  substitutions.doctree
.doctrees/reference/: formats.doctree  index.doctree  input_output.doctree  operations.doctree  parallel.doctree  parametrization.doctree
.doctrees/tutorial/: concepts.doctree  file_operations.doctree  index.doctree  installation.doctree  interface.doctree  quickstart.doctree
.github/workflows/: main.yml
_modules/: index.html
_modules/mosaic/: container.html  data.html  geometry.html  interactor.html  operations.html  parallel.html  parametrization.html  styles.html
_sources/: index.rst.txt  substitutions.rst.txt
_sources/reference/: formats.rst.txt  index.rst.txt  input_output.rst.txt  parallel.rst.txt  parametrization.rst.txt
_sources/tutorial/: concepts.rst.txt  installation.rst.txt  interface.rst.txt  quickstart.rst.txt
_static/: documentation_options.js
_templates/autosummary/: attribute.html  class.html  function.html  method.html  module.html  property.html
docs/: conf.py  index.rst
docs/api/: mosaic.container.DataContainer.change_visibility.rst  mosaic.container.DataContainer.connected_components.rst  mosaic.container.DataContainer.crop.rst  mosaic.container.DataContainer.dbscan_cluster.rst  mosaic.container.DataContainer.duplicate.rst  mosaic.container.DataContainer.get_actors.rst  mosaic.container.DataContainer.get_cluster_count.rst  mosaic.container.DataContainer.get_cluster_size.rst  mosaic.container.DataContainer.highlight_points.rst  mosaic.container.DataContainer.merge.rst  mosaic.container.DataContainer.remove.rst  mosaic.container.DataContainer.sample.rst  mosaic.container.DataContainer.trim.rst  mosaic.formats.parser.GeometryData.faces.rst  mosaic.formats.parser.GeometryData.normals.rst  mosaic.formats.parser.GeometryData.quaternions.rst  mosaic.formats.parser.GeometryData.rst  mosaic.formats.parser.GeometryData.sampling.rst  mosaic.formats.parser.GeometryData.shape.rst  mosaic.formats.parser.GeometryData.vertices.rst  mosaic.formats.parser.GeometryDataContainer.faces.rst  mosaic.formats.parser.GeometryDataContainer.normals.rst  mosaic.formats.parser.GeometryDataContainer.quaternions.rst  mosaic.formats.parser.GeometryDataContainer.rst  mosaic.formats.parser.GeometryDataContainer.sampling.rst  mosaic.formats.parser.GeometryDataContainer.shape.rst  mosaic.formats.parser.GeometryDataContainer.vertices.rst  mosaic.formats.reader.open_file.rst  mosaic.formats.reader.open_session.rst
docs/quickstart/: index.rst  installation.rst  license.rst
docs/reference/: formats.rst  index.rst  input_output.rst  operations.rst  parallel.rst  parametrization.rst
docs/tutorial/: concepts.rst  file_operations.rst  index.rst  installation.rst  issues.rst  quickstart.rst
hooks/: hook-pymeshlab.py
reference/: formats.html  index.html  input_output.html  operations.html  parallel.html  parametrization.html
reference/data_structures/: container.html  data.html  geometry.html  interactor.html  session.html
reference/gui/: dialogs.html  tabs.html  widgets.html
reference/rst/: mosaic.commands.session.Session.apply.html  mosaic.commands.session.Session.filter.html  mosaic.commands.session.Session.group.html  mosaic.commands.session.Session.html  (+223 more)
src/colabseg/: animate.py  (+17 more)
tests/: conftest.py  test_geometry_merge.py  test_interactor_undo.py  test_segmentation_geometry.py  test_swaps.py  test_undo.py
tutorial/: concepts.html  file_operations.html  index.html  installation.html  interface.html  quickstart.html
(+993 files in other folders)
