[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic"
authors = [
  { name = "Valentin Maurer", email = "valentin.maurer@embl-hamburg.de" },
]
version = "1.0.0"
description = "mosaic"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.22.2,<2.0",
    "scipy>=1.10.0",
    "vtk>=9.3.1",
    "PyQt6>=6.7.1",
    "pyqtgraph>=0.13.3",
    "pytme>=0.2.5",
    "open3d>=0.18.0",
    "libigl==2.5.1",
    "pymeshlab",
    "qtawesome",
    "matplotlib",
    "imageio",
    "imageio-ffmpeg",
    "Pillow",
    "importlib_resources",
]
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.gui-scripts]
mosaic = "mosaic.scripts.app:main"

[project.urls]
"Homepage" = "https://github.com/KosinskiLab/mosaic"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mosaic*"]

[tool.setuptools.package-data]
"mosaic.data" = ["*.png"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
omit = [
    "tests/*"
]
